--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#BCBCBC</color>
+    <color name="colorPrimaryDark">#BCBCBC</color>
+    <color name="colorPrimaryDark1">#FFFFFF</color>
+    <color name="colorAccent">#424242</color>
+
+    <color name="text_timer_color">#FFF</color>
 </resources>
