--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp" />
+
+    <Button
+        android:id="@+id/btn_personal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="个人中心" />
 </LinearLayout>
