--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -1,115 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
+    android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".activity.FindActivity">
 
-    <LinearLayout
-        android:id="@+id/ll_one"
+
+    <TextView
+        android:id="@+id/tv_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:padding="30dp">
+        android:text="12345678900"
+        android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/edt_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff"
-            android:hint="电话号码"
-            android:inputType="phone"
-            android:maxLength="11" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="5dp"
-            android:background="#A6000000" />
-
-        <LinearLayout
-            android:id="@+id/ll_code"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edt_code"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#fff"
-                android:hint="验证码"
-                android:inputType="number"
-                android:maxLength="4" />
-
-            <TextView
-                android:id="@+id/tv_get"
-                android:layout_width="110dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="获取验证码" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="5dp"
-            android:background="#A6000000" />
-
-        <Button
-            android:id="@+id/btn_next"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
-            android:text="下一步"
-            android:textColor="#fff"
-            android:textSize="25sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_two"
+    <EditText
+        android:id="@+id/edt_pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ll_one"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:padding="30dp"
-        android:visibility="gone">
+        android:layout_marginTop="15dp"
+        android:background="#fff"
+        android:hint="密码"
+        android:inputType="textPassword"
+        android:maxLength="16" />
 
-        <TextView
-            android:id="@+id/tv_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="12345678900"
-            android:textSize="20sp" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:background="#A6000000" />
 
-        <EditText
-            android:id="@+id/edt_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff"
-            android:hint="密码"
-            android:inputType="textPassword"
-            android:maxLength="16" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="5dp"
-            android:background="#A6000000" />
-
-        <Button
-            android:id="@+id/btn_find"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="提交"
-            android:textColor="#fff"
-            android:textSize="25sp" />
-    </LinearLayout>
-</RelativeLayout>
+    <Button
+        android:id="@+id/btn_find"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="提交"
+        android:textColor="#fff"
+        android:textSize="25sp" />
+</LinearLayout>
