完善注册/找回密码界面和密码 完善水费/电费/空调等界面和功能 添加水费/电费/空调费用的界面和功能

--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -7,7 +7,7 @@
     android:background="#fff"
     android:orientation="vertical"
     android:padding="30dp"
-    tools:context=".activity.FindActivity">
+    tools:context=".activity.FinishActivity">
 
 
     <TextView
