--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     tools:context=".activity.HomeFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#BCBCBC"
+        app:title="校园在线"
+        app:titleTextColor="#fff" />
+
     <com.zijing.schoolonline.layout.CardLayout
         android:id="@+id/cl_air"
         android:layout_width="match_parent"
