--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.PersonalFragment">
+    tools:context=".fragment.PersonalFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
