--- a/app/src/main/res/menu/record_menu.xml
+++ b/app/src/main/res/menu/record_menu.xml
@@ -2,11 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/item_air_record"
-        android:title="空调充值记录" />
-    <item
-        android:id="@+id/item_elect_record"
-        android:title="电费充值记录" />
-    <item
-        android:id="@+id/item_water_record"
-        android:title="水费充值记录" />
+        android:title="充值记录" />
 </menu>
