--- a/app/src/main/res/layout/click_layout.xml
+++ b/app/src/main/res/layout/click_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#fff"
     android:orientation="horizontal"
     android:padding="5dp">
 
@@ -12,7 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="15dp"
         android:text="联系电话"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_left_content"
@@ -21,7 +22,7 @@
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/tv_tag"
         android:text="123"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/iv_next"
@@ -29,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="22dp"
         android:src="@drawable/next" />
 
     <TextView
@@ -40,5 +41,5 @@
         android:layout_marginRight="10dp"
         android:layout_toLeftOf="@id/iv_next"
         android:text="12345678900"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 </RelativeLayout>
