--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -10,22 +10,25 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
         <TextView
             android:id="@+id/tv_card_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:text="空调"
             android:textColor="#fff"
-            android:textSize="30sp" />
+            android:textSize="27sp" />
 
         <ImageView
             android:id="@+id/iv_card_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:src="@drawable/air" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
