--- a/app/src/main/res/layout/click_layout.xml
+++ b/app/src/main/res/layout/click_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#fff"
     android:orientation="horizontal"
-    android:padding="5dp">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/tv_tag"
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="15dp"
+        android:drawableLeft="@drawable/ic_phone"
+        android:drawablePadding="10dp"
         android:text="联系电话"
         android:textSize="18sp" />
 
