--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -36,6 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:background="#81D4FA"
+        android:foreground="?android:attr/selectableItemBackground"
         android:text="提交"
         android:textColor="#fff"
         android:textSize="25sp" />
