--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,6 +91,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
+            android:background="#81D4FA"
+            android:foreground="?android:attr/selectableItemBackground"
             android:text="登录"
             android:textColor="#fff"
             android:textSize="20sp" />
