--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -59,6 +59,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
+        android:background="#81D4FA"
+        android:foreground="?android:attr/selectableItemBackground"
         android:text="下一步"
         android:textColor="#fff"
         android:textSize="20sp" />
