--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,13 +17,16 @@
         android:paddingEnd="10dp"
         android:paddingBottom="15dp">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_user_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_alignParentLeft="true"
             android:layout_margin="5dp"
-            android:src="@drawable/picture" />
+            android:src="@drawable/picture"
+            app:riv_border_color="#E3F2FD"
+            app:riv_border_width="2dp"
+            app:riv_oval="true" />
 
         <TextView
             android:id="@+id/tv_user_name"
